<resources>
    <string name="app_name">Employee App</string>
    <string name="employee_id">Employee ID</string>
    <string name="employee_name">Employee Name</string>
    <string name="age">Age</string>
    <string name="employee_position">Employee Position</string>
    <string name="employee_address">Employee Address</string>
    <string name="fill_the_details">Fill the details</string>
    <string name="submit">Submit</string>
    <string name="view">View</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>
